--- a/src/Pages/Courses/Courses.css
+++ b/src/Pages/Courses/Courses.css
@@ -3,3 +3,14 @@
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 25px;
 }
+
+.img {
+    height: 280px;
+}
+
+
+@media (max-width: 768px) {
+    .all-courses {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
